# ebay-alerts

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
alerts_backend/: .env.docker  ebay_api_test.ipynb  manage.py  requirements.txt  schema.yml
alerts_backend/alerts/: models.py  serializers.py  tasks.py  views.py
alerts_backend/alerts_backend/: asgi.py  celery.py  settings.py  settings_docker.py  settings_local.py  settings_original.py  urls.py  wsgi.py
alerts_backend/dockerfiles/: celery.dockerfile  postgres.dockerfile  server.dockerfile
alerts_backend/ebay_sdk/: __init__.py  auth.py  client.py  constants.py  models.py  utils.py
alerts_backend/notebooks/: Untitled.ipynb
alerts_backend/scripts/: entrypoint.sh
alerts_frontend/: package-lock.json  package.json
alerts_frontend/dockerfiles/: frontend.dockerfile
alerts_frontend/public/: index.html  manifest.json
alerts_frontend/src/: App.css  App.js  DataTablePage.js  TableComponent.js  api.js  index.css
analytics/: .env.docker  db_init.sql  manage.py  requirements.txt
analytics/analytics/: asgi.py  celery.py  settings.py  settings_docker.py  urls.py  wsgi.py
analytics/dockerfiles/: celery.dockerfile  postgres.dockerfile  server.dockerfile
analytics/insights/: apps.py  datatypes.py  insights.py  models.py  tasks.py
analytics/scripts/: entrypoint.sh
ebay_alerts/: db_init.sql  manage.py  schema.yml
ebay_alerts/alerts/: models.py  serializers.py  urls.py  views.py
ebay_alerts/ebay_alerts/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ebay_mock/: .env.docker  ebay_finding_cli.py  manage.py  requirements.txt  sample_mock_response.py  sample_response_100.py  sample_response_100_best_match.py
ebay_mock/authenticate/: apps.py  authentication.py  serializers.py  urls.py  views.py
ebay_mock/buy_api/: apps.py  urls.py  views.py
pubsub/: Untitled.ipynb  Untitled1.ipynb  __init__.py  consumer.py  event.py  producer.py  pubsubevent.py  pyproject.toml  redis_consumer.py  redis_producer.py
pubsub/pubsub/: __init__.py  redis_consumer.py
(+35 files in other folders)
