[tool.poetry]
name = "ebay-alerts"
version = "0.1.0"
description = "Manage dependecies for ebay_alerts project"
authors = ["gaurav <grathore07@gmail.com>"]
readme = "README.md"
packages = [{include = "ebay_alerts"}]

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.poetry.group.alerts_backend_docker.dependencies]
celery = "5.3.1"
dataclasses = "0.6"
dataclasses-json = "0.5.9"
django = "4.2.3"
django-celery-beat = "2.5.0"
django-cors-headers = "4.1.0"
django-enumchoicefield = "3.0.1"
django-redis = "5.3.0"
djangorestframework = "3.14.0"
drf-spectacular = "0.26.3"
html2text = "2020.1.16"
psycopg2-binary = "2.9.6"
pubsub = {path = "pubsub/dist/pubsub-0.1.1.tar.gz", develop=false}
python = "^3.11"
redis = "4.6.0"
requests = "2.31.0"
python-decouple = "^3.8"

[tool.poetry.group.analytics_backend_docker.dependencies]
celery = "5.3.1"
dataclasses = "0.6"
dataclasses-json = "0.5.9"
django = "4.2.3"
django-celery-beat = "2.5.0"
django-cors-headers = "4.1.0"
django-enumchoicefield = "3.0.1"
django-redis = "5.3.0"
djangorestframework = "3.14.0"
html2text = "2020.1.16"
psycopg2-binary = "2.9.6"
pubsub = {path = "pubsub/dist/pubsub-0.1.1.tar.gz", develop=false}
python = "^3.11"
redis = "4.6.0"
python-decouple = "^3.8"

[tool.poetry.group.ebay_mock_docker.dependencies]
Django = "4.2.3"
django-cors-headers = "4.1.0"
djangorestframework = "3.14.0"
python = "^3.11"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
