[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["gaurav <grathore07@gmail.com>"]
description = ""
name = "pubsub"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
dataclasses = "^0.6"
dataclasses-json = "^0.5.9"
python = "^3.11"
redis = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
